2009-01-18  Marek Safar <marek.safar@gmail.com>

	* ReaderWriterLockSlim.cs: Implemented all properties.

2008-12-02  Marek Safar <marek.safar@gmail.com>

	* ReaderWriterLockSlim.cs: Initial merge.

2008-09-05  Marek Safar <marek.safar@gmail.com>

	* ChangeLog: Added
