@@ -24,6 +24,14 @@
  * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
+#if NET_4_0
+
+using System;
+using System.Runtime.CompilerServices;
+
+[assembly:TypeForwardedTo (typeof(System.Threading.LockRecursionException))]
+
+#else
 
 using System;
 using System.Runtime.Serialization;
@@ -54,3 +62,5 @@ namespace System.Threading
 		}
 	}
 }
+
+#endif
