@@ -1,3 +1,7 @@
+2009-06-10  Marek Safar  <marek.safar@gmail.com>
+
+	* LockRecursionException.cs: Updated to 4.0 changes.
+
 2009-01-18  Marek Safar <marek.safar@gmail.com>
 
 	* ReaderWriterLockSlim.cs: Implemented all properties.
